crates/meilisearch/tests/dumps/snapshots/mod.rs/import_dump_v1_movie_with_settings/2.snap
---
source: crates/meilisearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 0,
      "batchUid": null,
      "indexUid": "indexUID",
      "status": "succeeded",
      "type": "documentAdditionOrUpdate",
      "canceledBy": null,
      "details": {
        "receivedDocuments": 0,
        "indexedDocuments": 31968
      },
      "error": null,
      "duration": "PT9.090735774S",
      "enqueuedAt": "2021-09-08T09:34:16.036101Z",
      "startedAt": "2021-09-08T09:34:16.261191226Z",
      "finishedAt": "2021-09-08T09:34:25.351927Z"
    }
  ],
  "total": 1,
  "limit": 1,
  "from": 0,
  "next": null
}
